fix database connection issue

--- a/src/main/resources/templates/css/login.css
+++ b/src/main/resources/templates/css/login.css
@@ -1,5 +1,5 @@
 body {
-    background: url('../assets/log in.jpg') no-repeat center #eee;
+    background: url('../../assets/log in.jpg') no-repeat center #eee;
     background-size: cover;
 }
 html, body {
