--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
-    <link rel="stylesheet" href="Login.css">
+    <link rel="stylesheet" href="css/login.css">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -22,19 +22,27 @@
                     <h1 class="display-1 text-white">Најава</h1>
 
                     <div class="form-outline mb-4">
-                        <input type="email" id="form2Example18" class="form-control form-control-lg" placeholder="Корисничко име" />
+                        <input type="email" id="form2Example18" class="form-control form-control-lg"
+                               placeholder="Корисничко име"/>
                     </div>
 
                     <div class="form-outline mb-4">
-                        <input type="password" id="form2Example28" class="form-control form-control-lg" placeholder="Лозинка"/>
+                        <input type="password" id="form2Example28" class="form-control form-control-lg"
+                               placeholder="Лозинка"/>
                     </div>
 
                     <div class="row">
                         <div class="col">
-                            <button class="btn btn-lg" type="button" style="background-color: #0FED7D; color: white">Најави се</button>
+                            <button class="btn btn-lg" type="button" style="background-color: #0FED7D; color: white">
+                                Најави се
+                            </button>
                         </div>
                         <div class="col">
-                            <button class="btn btn-lg" type="button" style="background-color: #ED510F; color: white">Регистрација</button>
+                            <a href="/register">
+                                <button class="btn btn-lg" type="button"
+                                        style="background-color: #ED510F; color: white">Регистрација
+                                </button>
+                            </a>
                         </div>
                     </div>
                 </form>
