spring security implemented

--- a/src/main/resources/templates/allCourses.html
+++ b/src/main/resources/templates/allCourses.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>All Courses</title>
 </head>
 <body>
-
+All courses for <th:block th:if="${#request.getRemoteUser() != null}" th:text="${#request.getRemoteUser()}"></th:block>
 </body>
 </html>
