--- a/src/main/resources/templates/css/login.css
+++ b/src/main/resources/templates/css/login.css
@@ -1,7 +1,9 @@
 body {
-    background: url('../../assets/log in.jpg') no-repeat center #eee;
+    /*background: url('../../assets/log in.jpg') no-repeat center #eee;*/
     background-size: cover;
+    background-color: #263238;
 }
+
 html, body {
     margin: 0;
     height: 100%;
