--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
-    <link href="css/login.css">
+    <link href="../css/login.css">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -11,7 +11,20 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
             crossorigin="anonymous"></script>
+    <style>
+        body {
+            background: url('../assets/log in.jpg') no-repeat center #263238;
+            background-size: cover;
+            /*background-color: #263238;*/
+        }
+
+        html, body {
+            margin: 0;
+            height: 100%;
+        }
+    </style>
 </head>
+<!--<body th:style="'background:url(' + @{../assets/log_in.png} + ') no-repeat center #263238; background-size: cover;">-->
 <body>
 <div class="container-fluid">
     <div class="row">
@@ -50,7 +63,7 @@
             <div class="px-5 ms-xl-4 mt-5">
                 <div class="row">
                     <div class="col-2">
-                        <img src="../assets/logo.png">
+                        <img th:src="@{../assets/logo.png}">
                     </div>
                     <div class="col">
                         <h1>ЕјАјДаУчиме</h1>
