--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -11,6 +11,18 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
             crossorigin="anonymous"></script>
+    <style>
+        body {
+            background: url("/assets/log in.jpg") no-repeat center #263238;
+            background-size: cover;
+            /*background-color: #263238;*/
+        }
+
+        html, body {
+            margin: 0;
+            height: 100%;
+        }
+    </style>
 </head>
 <body>
 <div class="container-fluid">
