edit profile functionality

--- a/src/main/resources/templates/allCourses.html
+++ b/src/main/resources/templates/allCourses.html
@@ -44,7 +44,7 @@
                     ><i class="bi bi-house mx-2"></i> <span>Почетна страна</span> </a>
                     <a href="#" class="list-group-item border-end-0 d-inline-block text-truncate d-flex justify-content-center align-items-center text-white"
                        data-bs-parent="#sidebar"><i class="bi bi-bookmark-star mx-2"></i> <span>Мои курсеви</span></a>
-                    <a href="#" class="list-group-item border-end-0 d-inline-block text-truncate d-flex justify-content-center align-items-center text-white"
+                    <a href="/profile" class="list-group-item border-end-0 d-inline-block text-truncate d-flex justify-content-center align-items-center text-white"
                        data-bs-parent="#sidebar"><i class="bi bi-file-earmark-person mx-2"></i> <span>Мој профил</span> <i class="bi bi-arrow-down-circle mx-2"></i></a>
                     <a href="#" class="list-group-item border-end-0 d-inline-block text-truncate d-flex justify-content-center align-items-center text-white"
                        data-bs-parent="#sidebar"><i class="bi bi-gear mx-2"></i> <span>Опции</span></a>
