all pages from figma with design and clicks

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -42,19 +42,19 @@
                     <a href="/home"
                        class="list-group-item border-end-0 d-inline-block text-truncate d-flex justify-content-center align-items-center text-white"
                        data-bs-parent="#sidebar"><i class="bi bi-house mx-2"></i> <span>Почетна страна</span> </a>
-                    <a href="#"
+                    <a href="/myCourses"
                        class="list-group-item border-end-0 d-inline-block text-truncate d-flex justify-content-center align-items-center text-white"
                        data-bs-parent="#sidebar"><i class="bi bi-bookmark-star mx-2"></i> <span>Мои курсеви</span></a>
-                    <a href="#"
+                    <a href="/profile"
                        class="list-group-item border-end-0 d-inline-block text-truncate d-flex justify-content-center align-items-center text-white"
                        style="background: #2B829D"
                        data-bs-parent="#sidebar"><i class="bi bi-file-earmark-person mx-2"></i> <span>Мој профил</span>
                         <i class="bi bi-arrow-up-circle mx-2"></i></a>
-                    <a href="#"
+                    <a href="/profile"
                        class="list-group-item border-end-0 d-inline-block text-truncate d-flex justify-content-center align-items-center text-white"
                        style="background: #1D242E"
                        data-bs-parent="#sidebar"><i class="bi bi-pencil mx-2"></i></i> <span>Уреди профил</span></a>
-                    <a href="#"
+                    <a href="/certificates"
                        class="list-group-item border-end-0 d-inline-block text-truncate d-flex justify-content-center align-items-center text-white"
                        style="background: rgba(29, 36, 46, 0.5);"
                        data-bs-parent="#sidebar"><i class="bi bi-award mx-2"></i> <span>Сертификати</span></a>
@@ -82,7 +82,7 @@
                             <a href="#" data-bs-target="#sidebar" data-bs-toggle="collapse"
                                class="border rounded-3 p-1 text-decoration-none text-white"
                                style="background: #2B829D;"><i class="bi bi-list bi-lg py-2 p-1"></i> <span
-                                    style="padding-right: 5px"> Menu </span></a>
+                                    style="padding-right: 5px"> Мени </span></a>
                             <form class="form-inline my-2 my-lg-0 mx-4">
                                 <input class="form-control mr-sm-2" type="search" placeholder="Search"
                                        aria-label="Search">
