--- a/src/main/resources/templates/certificates.html
+++ b/src/main/resources/templates/certificates.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>All Courses</title>
+    <title>Current course</title>
     <!--    <link href="css/allCourses.css">-->
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -33,24 +33,30 @@
     <div class="row flex-nowrap">
         <div class="col-auto px-0">
             <div id="sidebar" class="collapse collapse-horizontal show border-end py-2">
-                <a href="#"
-                   class="list-group-item border-end-0 d-inline-block text-truncate d-flex justify-content-center align-items-center text-white my-3"
+                <a href="#" class="list-group-item border-end-0 d-inline-block text-truncate d-flex justify-content-center align-items-center text-white my-3"
                    data-bs-parent="#sidebar"
                    style="background: #1D242E; height: 5rem"><h2>ЕјАјДаУчиме</h2></a>
                 <div id="sidebar-nav" class="list-group border-0 rounded-0 text-sm-start min-vh-100">
 
                     <a href="/home"
                        class="list-group-item border-end-0 d-inline-block text-truncate d-flex justify-content-center align-items-center text-white"
-                       data-bs-parent="#sidebar"
-                       style="background: #2B829D"
-                    ><i class="bi bi-house mx-2"></i> <span>Почетна страна</span> </a>
+                       data-bs-parent="#sidebar"><i class="bi bi-house mx-2"></i> <span>Почетна страна</span> </a>
                     <a href="/myCourses"
                        class="list-group-item border-end-0 d-inline-block text-truncate d-flex justify-content-center align-items-center text-white"
                        data-bs-parent="#sidebar"><i class="bi bi-bookmark-star mx-2"></i> <span>Мои курсеви</span></a>
                     <a href="/profile"
                        class="list-group-item border-end-0 d-inline-block text-truncate d-flex justify-content-center align-items-center text-white"
+                       style="background: #2B829D"
                        data-bs-parent="#sidebar"><i class="bi bi-file-earmark-person mx-2"></i> <span>Мој профил</span>
-                        <i class="bi bi-arrow-down-circle mx-2"></i></a>
+                        <i class="bi bi-arrow-up-circle mx-2"></i></a>
+                    <a href="/profile"
+                       class="list-group-item border-end-0 d-inline-block text-truncate d-flex justify-content-center align-items-center text-white"
+                       style="background: rgba(29, 36, 46, 0.5);"
+                       data-bs-parent="#sidebar"><i class="bi bi-pencil mx-2"></i></i> <span>Уреди профил</span></a>
+                    <a href="/certificates"
+                       class="list-group-item border-end-0 d-inline-block text-truncate d-flex justify-content-center align-items-center text-white"
+                       style="background: #1D242E"
+                       data-bs-parent="#sidebar"><i class="bi bi-award mx-2"></i> <span>Сертификати</span></a>
                     <a href="#"
                        class="list-group-item border-end-0 d-inline-block text-truncate d-flex justify-content-center align-items-center text-white"
                        data-bs-parent="#sidebar"><i class="bi bi-gear mx-2"></i> <span>Опции</span></a>
@@ -74,11 +80,9 @@
                         <ul class="navbar-nav me-auto">
                             <a href="#" data-bs-target="#sidebar" data-bs-toggle="collapse"
                                class="border rounded-3 p-1 text-decoration-none text-white"
-                               style="background: #2B829D;"><i class="bi bi-list bi-lg py-2 p-1"></i> <span
-                                    style="padding-right: 5px"> Мени </span></a>
+                               style="background: #2B829D;"><i class="bi bi-list bi-lg py-2 p-1"></i> <span style="padding-right: 5px"> Мени </span></a>
                             <form class="form-inline my-2 my-lg-0 mx-4">
-                                <input class="form-control mr-sm-2" type="search" placeholder="Search"
-                                       aria-label="Search">
+                                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                             </form>
                         </ul>
                         <ul class="navbar-nav">
@@ -87,8 +91,7 @@
                             </li>
                             <li class="nav-item text-dark text-center d-flex justify-content-center align-items-center">
                                 <th:block th:if="${#request.getRemoteUser() != null}"
-                                          th:text="${#request.getRemoteUser()}">milan
-                                </th:block>
+                                          th:text="${#request.getRemoteUser()}">milan</th:block>
                             </li>
                             <li class="nav-item mx-3">
                                 <a class="btn btn-danger d-flex" href="/logout">
@@ -100,41 +103,11 @@
                 </div>
             </nav>
             <div class="page-header pt-3 mx-4">
-                <h2>Избери курс</h2>
+                <h2>Сертификати</h2>
             </div>
             <hr class="mx-4">
             <div class="row mx-4">
-                <div class="col-4">
-                    <div class="card border-success mb-3" style="max-width: 25rem;">
-                        <div class="card-header text-success">Кон курсот <i class="bi bi-box-arrow-in-right"></i></div>
-                        <div class="card-body text-success">
-                            <h5 class="card-title">Вовед во Вештачка Интелигенција за почетници</h5>
-                            <p class="card-text">Курс наменет за апсолутни почетници без техничка позадина</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-4">
-                    <div class="card border-primary mb-3" style="max-width: 25rem;">
-                        <div class="card-header text-primary">Кон курсот <i class="bi bi-box-arrow-in-right"></i></div>
-                        <div class="card-body text-primary">
-                            <h5 class="card-title">Вовед во Вештачка Интелигенција за запознаени</h5>
-                            <p class="card-text">Курс наменет за луѓе со мали познавања од областа</p>
-                        </div>
-                    </div>
-                </div>
-                <a class="col-4 text-decoration-none" href="/currentCourse">
-                    <div>
-                        <div class="card border-danger mb-3" style="max-width: 25rem;">
-                            <div class="card-header text-danger">Кон курсот <i class="bi bi-box-arrow-in-right"></i>
-                            </div>
-                            <div class="card-body text-danger">
-                                <h5 class="card-title">Вовед во Вештачка Интелигенција за експерти</h5>
-                                <p class="card-text">Курс наменет за луѓе запознаени со областа или со силна техничка
-                                    позадина</p>
-                            </div>
-                        </div>
-                    </div>
-                </a>
+                сертификати
             </div>
         </main>
     </div>
