--- a/src/main/resources/templates/currentCourse.html
+++ b/src/main/resources/templates/currentCourse.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>All Courses</title>
+    <title>Current course</title>
     <!--    <link href="css/allCourses.css">-->
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -42,10 +42,10 @@
                     <a href="/home"
                        class="list-group-item border-end-0 d-inline-block text-truncate d-flex justify-content-center align-items-center text-white"
                        data-bs-parent="#sidebar"
-                       style="background: #2B829D"
                     ><i class="bi bi-house mx-2"></i> <span>Почетна страна</span> </a>
                     <a href="/myCourses"
                        class="list-group-item border-end-0 d-inline-block text-truncate d-flex justify-content-center align-items-center text-white"
+                       style="background: #2B829D"
                        data-bs-parent="#sidebar"><i class="bi bi-bookmark-star mx-2"></i> <span>Мои курсеви</span></a>
                     <a href="/profile"
                        class="list-group-item border-end-0 d-inline-block text-truncate d-flex justify-content-center align-items-center text-white"
@@ -100,41 +100,56 @@
                 </div>
             </nav>
             <div class="page-header pt-3 mx-4">
-                <h2>Избери курс</h2>
+                <div class="row">
+                    <div class="col">
+                        <h2>Вовед во вештачка интелигенција за експерти</h2>
+                        <h5>Дел 2 - Машинско учење</h5>
+                    </div>
+                    <div class="col justify-content-center align-items-center">
+                        <div class="progress m-4">
+                            <div class="progress-bar bg-danger" role="progressbar" style="width: 25%"
+                                 aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <hr class="mx-4">
             <div class="row mx-4">
-                <div class="col-4">
-                    <div class="card border-success mb-3" style="max-width: 25rem;">
-                        <div class="card-header text-success">Кон курсот <i class="bi bi-box-arrow-in-right"></i></div>
-                        <div class="card-body text-success">
-                            <h5 class="card-title">Вовед во Вештачка Интелигенција за почетници</h5>
-                            <p class="card-text">Курс наменет за апсолутни почетници без техничка позадина</p>
-                        </div>
-                    </div>
+                <div class="col-6">
+                    <h4>Линеарна регресија</h4>
+                    <p class="my-3">
+                        Линеарната регресија се користи за предвидување на односот помеѓу две променливи со примена на
+                        линеарна равенка на набљудуваните податоци. Постојат два типа на променлива, едната променлива
+                        се нарекува независна променлива, а другата е зависна променлива. Линеарната регресија најчесто
+                        се користи за предвидувачка анализа. Главната идеја на регресијата е да се испитаат две работи.
+                        Прво, дали множеството променливи за предвидување прави добра работа во предвидувањето на
+                        променливата за исходот (зависна). Втората работа е кои променливи се значајни предвидувачи на
+                        променливата на исходот. Во овoј дел ќе разговараме за концептот на равенката на линеарна
+                        регресија, формулата и својствата на линеарната регресија.
+                    </p>
                 </div>
-                <div class="col-4">
-                    <div class="card border-primary mb-3" style="max-width: 25rem;">
-                        <div class="card-header text-primary">Кон курсот <i class="bi bi-box-arrow-in-right"></i></div>
-                        <div class="card-body text-primary">
-                            <h5 class="card-title">Вовед во Вештачка Интелигенција за запознаени</h5>
-                            <p class="card-text">Курс наменет за луѓе со мали познавања од областа</p>
-                        </div>
-                    </div>
+                <div class="col justify-content-center align-items-center">
+                    <img src="https://cdn.wallstreetmojo.com/wp-content/uploads/2022/06/linear-regression-3.jpg">
                 </div>
-                <a class="col-4 text-decoration-none" href="/currentCourse">
-                    <div>
-                        <div class="card border-danger mb-3" style="max-width: 25rem;">
-                            <div class="card-header text-danger">Кон курсот <i class="bi bi-box-arrow-in-right"></i>
-                            </div>
-                            <div class="card-body text-danger">
-                                <h5 class="card-title">Вовед во Вештачка Интелигенција за експерти</h5>
-                                <p class="card-text">Курс наменет за луѓе запознаени со областа или со силна техничка
-                                    позадина</p>
-                            </div>
-                        </div>
-                    </div>
-                </a>
+                <nav aria-label="...">
+                    <ul class="pagination m-5">
+                        <li class="page-item disabled">
+                            <span class="page-link">Претходна страна</span>
+                        </li>
+                        <li class="page-item"><a class="page-link" href="#">1</a></li>
+                        <li class="page-item active">
+      <span class="page-link">
+        2
+        <span class="sr-only"></span>
+      </span>
+                        </li>
+                        <li class="page-item"><a class="page-link" href="#">3</a></li>
+                        <li class="page-item">
+                            <a class="page-link" href="/currentCourse/lastPage">Следна страна</a>
+                        </li>
+                    </ul>
+                </nav>
+
             </div>
         </main>
     </div>
