--- a/src/main/resources/templates/currentCourseLastPage.html
+++ b/src/main/resources/templates/currentCourseLastPage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>All Courses</title>
+    <title>Current course</title>
     <!--    <link href="css/allCourses.css">-->
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -42,10 +42,10 @@
                     <a href="/home"
                        class="list-group-item border-end-0 d-inline-block text-truncate d-flex justify-content-center align-items-center text-white"
                        data-bs-parent="#sidebar"
-                       style="background: #2B829D"
                     ><i class="bi bi-house mx-2"></i> <span>Почетна страна</span> </a>
                     <a href="/myCourses"
                        class="list-group-item border-end-0 d-inline-block text-truncate d-flex justify-content-center align-items-center text-white"
+                       style="background: #2B829D"
                        data-bs-parent="#sidebar"><i class="bi bi-bookmark-star mx-2"></i> <span>Мои курсеви</span></a>
                     <a href="/profile"
                        class="list-group-item border-end-0 d-inline-block text-truncate d-flex justify-content-center align-items-center text-white"
@@ -100,41 +100,55 @@
                 </div>
             </nav>
             <div class="page-header pt-3 mx-4">
-                <h2>Избери курс</h2>
+                <div class="row">
+                    <div class="col">
+                        <h2>Вовед во вештачка интелигенција за експерти</h2>
+                        <h5>Дел 10 - Сертификат</h5>
+                    </div>
+                    <div class="col justify-content-center align-items-center">
+                        <div class="progress m-4">
+                            <div class="progress-bar bg-danger" role="progressbar" style="width: 100%"
+                                 aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <hr class="mx-4">
             <div class="row mx-4">
-                <div class="col-4">
-                    <div class="card border-success mb-3" style="max-width: 25rem;">
-                        <div class="card-header text-success">Кон курсот <i class="bi bi-box-arrow-in-right"></i></div>
-                        <div class="card-body text-success">
-                            <h5 class="card-title">Вовед во Вештачка Интелигенција за почетници</h5>
-                            <p class="card-text">Курс наменет за апсолутни почетници без техничка позадина</p>
+                <div class="text-center">
+                    <div class="row m-4">
+                        <h4>Успешно го заврши кусот!!</h4>
+                    </div>
+                    <div class="row">
+                        <h6>Дали би сакал сертификат со оцена 6 за успешно завршување, или пак, ќе се осмелиш да го
+                            провериш стекнатото знаење за повисока оцена?</h6>
+                    </div>
+                    <div class="row m-5">
+                        <div class="col">
+                            <a href="/certificates">
+                                <button type="button" class="btn btn-lg btn-success">Генерирај сертификат!</button>
+                            </a>
+                        </div>
+                        <div class="col">
+                            <button type="button" class="btn btn-lg btn-danger">Кон тест!</button>
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
-                    <div class="card border-primary mb-3" style="max-width: 25rem;">
-                        <div class="card-header text-primary">Кон курсот <i class="bi bi-box-arrow-in-right"></i></div>
-                        <div class="card-body text-primary">
-                            <h5 class="card-title">Вовед во Вештачка Интелигенција за запознаени</h5>
-                            <p class="card-text">Курс наменет за луѓе со мали познавања од областа</p>
-                        </div>
-                    </div>
-                </div>
-                <a class="col-4 text-decoration-none" href="/currentCourse">
-                    <div>
-                        <div class="card border-danger mb-3" style="max-width: 25rem;">
-                            <div class="card-header text-danger">Кон курсот <i class="bi bi-box-arrow-in-right"></i>
-                            </div>
-                            <div class="card-body text-danger">
-                                <h5 class="card-title">Вовед во Вештачка Интелигенција за експерти</h5>
-                                <p class="card-text">Курс наменет за луѓе запознаени со областа или со силна техничка
-                                    позадина</p>
-                            </div>
-                        </div>
-                    </div>
-                </a>
+                <nav aria-label="...">
+                    <ul class="pagination m-5">
+                        <li class="page-item">
+                            <a class="page-link" href="/currentCourse">
+                                Претходна страна
+                            </a>
+                        </li>
+                        <li class="page-item"><a class="page-link" href="#">8</a></li>
+                        <li class="page-item"><a class="page-link" href="#">9</a></li>
+                        <li class="page-item active"><a class="page-link" href="#">10</a></li>
+                        <li class="page-item disabled">
+                            <a class="page-link" href="/currentCourse/lastPage">Следна страна</a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
         </main>
     </div>
