test initial functionality

--- a/src/main/resources/templates/currentCourseLastPage.html
+++ b/src/main/resources/templates/currentCourseLastPage.html
@@ -130,7 +130,9 @@
                             </a>
                         </div>
                         <div class="col">
-                            <button type="button" class="btn btn-lg btn-danger">Кон тест!</button>
+                            <a href="/tests/eksperti">
+                                <button type="button" class="btn btn-lg btn-danger">Кон тест!</button>
+                            </a>
                         </div>
                     </div>
                 </div>
