--- a/src/main/resources/templates/myCourses.html
+++ b/src/main/resources/templates/myCourses.html
@@ -33,9 +33,13 @@
     <div class="row flex-nowrap">
         <div class="col-auto px-0">
             <div id="sidebar" class="collapse collapse-horizontal show border-end py-2">
-                <a href="#" class="list-group-item border-end-0 d-inline-block text-truncate d-flex justify-content-center align-items-center text-white my-3"
+                <a href="/home"
+                   class="list-group-item border-end-0 d-inline-block text-truncate d-flex justify-content-center align-items-center text-white my-3"
                    data-bs-parent="#sidebar"
-                   style="background: #1D242E; height: 5rem"><h2>ЕјАјДаУчиме</h2></a>
+                   style="background: #1D242E; height: 5rem">
+                    <div class="col-2">
+                        <img class="m-1 w-75 h-75" th:src="@{https://raw.githubusercontent.com/tasevsky/EjAjDaUcime/main/src/main/resources/assets/logo.png}">
+                    </div><h2>ЕјАјДаУчиме</h2></a>
                 <div id="sidebar-nav" class="list-group border-0 rounded-0 text-sm-start min-vh-100">
 
                     <a href="/home"
