--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -13,7 +13,7 @@
             crossorigin="anonymous"></script>
     <style>
         body {
-            background: url('../assets/log in.jpg') no-repeat center #263238;
+            background: url('https://raw.githubusercontent.com/tasevsky/EjAjDaUcime/main/src/main/resources/assets/log%20in.jpg') no-repeat center #263238;
             background-size: cover;
             /*background-color: #263238;*/
         }
@@ -63,7 +63,7 @@
             <div class="px-5 ms-xl-4 mt-5">
                 <div class="row">
                     <div class="col-2">
-                        <img th:src="@{../assets/logo.png}">
+                        <img th:src="@{https://raw.githubusercontent.com/tasevsky/EjAjDaUcime/main/src/main/resources/assets/logo.png}">
                     </div>
                     <div class="col">
                         <h1>ЕјАјДаУчиме</h1>
